syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "Connection";

package nem;


import "connection_type_config.proto";
import "db_type_config.proto";
import "google/protobuf/timestamp.proto";

message Connection {  
    string uuid = 1;
    int64 version = 2;
    string store_uuid = 3;
    string enviorment_uuid = 4;
    string identifier = 5;
    ConnectionDbType db_type = 6;
    DbTypeConfig db_type_config = 7;
    string db_version = 8;
    ConnectionType type = 9;
    ConnectionTypeConfig type_config = 10;
    ConnectionStatus status = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    string created_by_uuid = 14;
    string updated_by_uuid = 15;    
}

enum ConnectionDbType { 
    CONNECTION_DB_TYPE_INVALID = 0;
    CONNECTION_DB_TYPE_MYSQL = 1;
    CONNECTION_DB_TYPE_POSTGRES = 2;
}

enum ConnectionStatus { 
    CONNECTION_STATUS_INVALID = 0;
    CONNECTION_STATUS_ACTIVE = 1;
    CONNECTION_STATUS_DISABLED = 2;
}

enum ConnectionType { 
    CONNECTION_TYPE_INVALID = 0;
    CONNECTION_TYPE_TCP_IP = 1;
    CONNECTION_TYPE_TCP_IP_SSH = 2;
}
