syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "Membership";

package nem;


import "google/protobuf/timestamp.proto";

message Membership {  
    string uuid = 1;
    string owner_uuid = 2;
    MembershipType type = 3;
    google.protobuf.Timestamp start_date = 4;
    string billing_metadata = 5;
    MembershipStatus status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    string created_by_uuid = 9;
    string updated_by_uuid = 10;    
}

enum MembershipStatus { 
    MEMBERSHIP_STATUS_INVALID = 0;
    MEMBERSHIP_STATUS_ACTIVE = 1;
    MEMBERSHIP_STATUS_DISABLED = 2;
}

enum MembershipType { 
    MEMBERSHIP_TYPE_INVALID = 0;
    MEMBERSHIP_TYPE_PRO = 1;
}
